# SE4A_EdoardoMenegotto_VeronicaPizzigati_ChiaraSerafini

./: .gitignore  Doxyfile  README.md
backend/: __init__.py  requirements.txt
backend/app/: main.py
backend/tests/: test_main.py
dashboard/: index.html  script.js  styles.css
doc/: doxygen_pages.dox
edge/: CMakeLists.txt
edge/experiment_results/: humidity_week.csv  light_week.csv  ph_week.csv  temperature_week.csv
edge/experiments/: CMakeLists.txt
edge/experiments/actuators/: CMakeLists.txt  actuator_simulation.cpp
edge/experiments/common/: experiment_output.cpp  experiment_output.hpp  experiment_utils.cpp  experiment_utils.hpp  sensor_experiment_runner.cpp  sensor_experiment_runner.hpp
edge/experiments/controllers/: CMakeLists.txt  controller_generic_comparison.cpp  controller_irrigation_comparison.cpp  pid_step_response.cpp  predictive_step_response.cpp  threshold_step_response.cpp
edge/experiments/sensors/: CMakeLists.txt  environment_simulation.cpp  humidity_simulation.cpp  light_simulation.cpp  ph_simulation.cpp  sensor_simulation.cpp  soil_moisture_simulation.cpp  temperature_simulation.cpp
edge/include/smarthydro/: actuator_manager.hpp  actuator_simulator.hpp  controllers.hpp  environment_simulator.hpp  sensor_simulator.hpp
edge/src/: CMakeLists.txt  actuator_manager.cpp  actuator_simulator.cpp  controllers.cpp  environment_simulator.cpp  main.cpp  sensor_simulator.cpp
edge/tests/: CMakeLists.txt  actuator_live_smoke.cmake  actuator_manager_tests.cpp  actuator_simulation_smoke.cmake  actuator_simulator_tests.cpp  actuator_tests.cpp  controller_comparison_smoke.cmake  controllers_tests.cpp  environment_tests.cpp  experiment_smoke.cmake  sensor_simulation_smoke.cmake  sensor_simulator_tests.cpp  sensor_tests.cpp  standard_experiment_smoke.cmake
